Hugo: fix header--wide height on tablet sized screens
- Adjust header height
- More spacing above docs when header--wide

For https://linear.app/usmedia/issue/CUE-203

Closes #342 as merged as of commit 6ed15a6d.

--- a/hugo/assets/scss/components/docs.scss
+++ b/hugo/assets/scss/components/docs.scss
@@ -78,12 +78,6 @@
         }
     }
 
-    @include screen($screen-simple) {
-        &__main {
-            padding-top: 20px;
-        }
-    }
-
     @include screen($screen-normal) {
         align-items: start;
         display: grid;
